--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@greatsumini/react-facebook-login": "^3.4.0",
+    "@react-oauth/google": "^0.12.2",
     "axios": "^1.13.2",
+    "canvas-confetti": "^1.9.4",
     "next": "16.0.3",
     "react": "^19.2.0",
     "react-dom": "19.2.0",
